fix/full title of compnent was not fit in container

--- a/src/components/ComponentHeader/ComponentHeader.module.scss
+++ b/src/components/ComponentHeader/ComponentHeader.module.scss
@@ -7,7 +7,7 @@
   padding: 4px 15px;
   background-color: rgb(77,189,225);
   border: 5px solid $color-bg-container;
-  width: min-content;
+  width: max-content;
   border-radius: 4px;
   height: 34px;
 }
